@@ -160,7 +160,7 @@ public:
       TEX_MIRROR = D3DTADDRESS_MIRROR
    };
 
-   RenderDevice(const HWND hwnd, const int width, const int height, const bool fullscreen, const int colordepth, int &refreshrate, int VSync, const bool useAA, const bool stereo3D, const bool FXAA, const bool useNvidiaApi);
+   RenderDevice(const HWND hwnd, const int width, const int height, const bool fullscreen, const int colordepth, int &refreshrate, int VSync, const bool useAA, const bool stereo3D, const bool FXAA, const bool useNvidiaApi, const bool disable_dwm);
    ~RenderDevice();
 
    void BeginScene();
@@ -301,6 +301,9 @@ private:
    //bool m_RESZ_support;
    bool m_force_aniso;
    bool m_compress_textures;
+
+   bool m_dwm_was_enabled;
+   bool m_dwm_enabled;
 
 public:
    static bool m_useNvidiaApi;
