@@ -348,20 +348,21 @@ BEGIN
     CONTROL         "Alternative Depth Buffer processing",IDC_USE_NVIDIA_API_CHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,247,127,10
     CONTROL         "Software Vertex processing",IDC_SOFTWARE_VP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,257,104,10
-    CONTROL         "512",IDC_Tex512,"Button",BS_AUTORADIOBUTTON | WS_GROUP,290,281,28,10
-    CONTROL         "1024",IDC_Tex1024,"Button",BS_AUTORADIOBUTTON,252,281,32,10
-    CONTROL         "2048",IDC_Tex2048,"Button",BS_AUTORADIOBUTTON,214,281,32,10
-    CONTROL         "Unlimited",IDC_TexUnlimited,"Button",BS_AUTORADIOBUTTON,166,281,45,10
-    CONTROL         "",IDC_ARASlider,"msctls_trackbar32",TBS_AUTOTICKS | TBS_TOP | WS_TABSTOP,156,308,183,20
+    CONTROL         "Disable Desktop Composition",IDC_DISABLE_DWM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,267,127,10
+    CONTROL         "512",IDC_Tex512,"Button",BS_AUTORADIOBUTTON | WS_GROUP,290,288,28,10
+    CONTROL         "1024",IDC_Tex1024,"Button",BS_AUTORADIOBUTTON,252,288,32,10
+    CONTROL         "2048",IDC_Tex2048,"Button",BS_AUTORADIOBUTTON,214,288,32,10
+    CONTROL         "Unlimited",IDC_TexUnlimited,"Button",BS_AUTORADIOBUTTON,166,288,45,10
+    CONTROL         "",IDC_ARASlider,"msctls_trackbar32",TBS_AUTOTICKS | TBS_TOP | WS_TABSTOP,156,314,183,20
     PUSHBUTTON      "Reset to Defaults",IDC_DEFAULTS,154,340,63,14
     DEFPUSHBUTTON   "OK",IDOK,240,340,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,297,340,50,14
     GROUPBOX        "Video Mode",IDC_STATIC,7,7,142,347
     GROUPBOX        "Ball Rendering",IDC_STATIC,154,7,103,92
     GROUPBOX        "3D Stereo Output",IDC_STATIC,262,7,85,80
-    GROUPBOX        "Performance and Troubleshooting",IDC_STATIC,154,188,193,142
-    GROUPBOX        "Max Texture Dimension (for low-end gfx boards)",IDC_STATIC,159,270,180,25
-    LTEXT           "Elements Detail Level (decrease = performance)",IDC_STATIC,162,299,156,8
+    GROUPBOX        "Performance and Troubleshooting",IDC_STATIC,154,188,193,149
+    GROUPBOX        "Max Texture Dimension (for low-end gfx boards)",IDC_STATIC,159,278,180,25
+    LTEXT           "Elements Detail Level (decrease = performance)",IDC_STATIC,162,306,156,8
     GROUPBOX        "Ball aspect ratio for stretched Tables",IDC_STATIC,12,274,132,75
     GROUPBOX        "Automatic Night->Day cycle",IDC_STATIC,154,145,193,39
     LTEXT           "(Cabinet usage)",IDC_STATIC,24,190,50,8
